<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_giris"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_giris" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/menu_transfer" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_launcher"
            android:title="@string/menu_tasima" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_teknik" />
    </group>

</menu>
