<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_giris">

    <fragment
        android:id="@+id/nav_giris"
        android:name="com.lcwaikiki.wms.ui.giris.girisFragment"
        android:label="@string/menu_giris"
        tools:layout="@layout/fragment_giris" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.lcwaikiki.wms.ui.home.HomeFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lcwaikiki.wms.ui.tasima.tasimaFragment"
        android:label="@string/menu_tasima"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lcwaikiki.wms.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_teknik"
        tools:layout="@layout/fragment_slideshow" />
</navigation>