<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.giris.girisFragment">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:columnCount="2"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Bekleyen Toplam Görev -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"

            android:layout_columnWeight="2"
            android:layout_margin="8dp"
            android:background="#EC5138">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_popup_reminder"
                android:layout_gravity="end|top"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:text="@string/waiting_task"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="4dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

         
        </FrameLayout>

        <!-- Toplama -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="#8CCD58">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/stat_sys_download"
                android:layout_gravity="end|top"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="4dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:text="@string/collecting"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <!-- Depolama -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="#EF7800">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/stat_sys_upload_done"
                android:layout_gravity="end|top"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="4dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:text="@string/storing"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <!-- İkmal -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="#019CEF">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_dialog_dialer"
                android:layout_gravity="end|top"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="4dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:text="@string/supply"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <!-- Transfer -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="#6F01EF">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_media_ff"
                android:layout_gravity="end|top"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="4dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:text="@string/transfer"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </FrameLayout>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>